--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:image" content="profile.png" />
     <title>000000 최다애의 독서 링크</title>
     <style>
+
         /* 10번 글꼴 꾸미기 */
         @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
         * {
@@ -70,7 +71,7 @@
             /* 글자의 크기와 굵기, 색깔(배경색깔 복사함) */
             font-size: 14px;
             font-weight: bold;
-            color: rgb(166, 81, 223);
+            color: olivedrab;
 
             /* 가운데 정렬(위에서 복사함) */
             display: flex;
@@ -89,7 +90,9 @@
             background-color: #d2d2d2;
             color: black;
         }
-        
+        body {
+        background-image: url("backimg.jpg");
+        }
     </style>
 </head>
 
