--- a/mybook.html
+++ b/mybook.html
@@ -23,10 +23,10 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="005.jpg" class="d-block w-100" alt="...">
+            <img src="005.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="006.jpg" class="d-block w-100" alt="...">
+            <img src="006.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
