--- a/myjob.html
+++ b/myjob.html
@@ -24,13 +24,16 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="001.jpg" class="d-block w-100" alt="...">
+            <img src="001.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="002.jpg" class="d-block w-100" alt="...">
+            <img src="002.png" class="d-block w-100" alt="...">
           </div>
           <div class="carousel-item">
-            <img src="003.jpg" class="d-block w-100" alt="...">
+            <img src="003.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="004.png" class="d-block w-100" alt="...">
           </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
