--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             align-items: center;
         }
         /* 9번 wrap 박스 안의 a태그 버튼 꾸미기 */
-        .wrap > a {
+        .wrap>button {
             width: 300px;
             height: 50px;
             /* 버튼 배경 색과 둥글기 */
